<resources>
    <string name="card_title_dialing">Dialing</string>
    <string name="card_title_in_progress">Call in progress</string>
    <string name="card_title_incoming_call">Incoming call</string>
    <string name="card_title_call_ended">Call ended</string>
    <string name="card_title_ended_no_codec">ERROR: Codecs Incompatible</string>
    <string name="card_title_on_hold">On hold</string>
    <string name="app_name">密信</string>
    <string name="slogan">You are what you talk about</string>
    <string name="save_checkbox">保存账户</string>
    <string name="login_btn">登录</string>
    <string name="signup_btn">注册</string>
    <string name="register_success">注册成功</string>
    <string name="verify_btn">验证</string>
    <string name="resend_btn">重发</string>
    <string name="cfm_btn">确认</string>
    <string name="signup_complete_btn">完成注册</string>
    <string name="search_btn">搜索</string>
    <string name="chat_btn">聊天</string>
    <string name="voice_btn">语音</string>
    <string name="adduser_btn">加为好友</string>
    <string name="reset_btn">重置</string>
    <string name="loginName">账户</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="hide_login">隐身登录</string>
    <string name="auto_login">自动登录</string>
    <string name="male"> 男</string>
    <string name="female"> 女</string>
    <string name="nickname">昵称</string>
    <string name="your_cellphone">你的手机号码</string>
    <string name="your_verifycode">输入收到的验证码</string>
    <string name="remark_hint">个人签名</string>
    <string name="location_hint">你在哪里</string>
    <string name="search_hint">搜索手机号码</string>
    <string name="end_call">结束</string>
    <string name="feature_introduction">功能介绍</string>
    <string name="hello">你好...</string>
    <string name="official_network_service_terms_weibo">官网    |    服务条款   |    微博</string>
    <string name="reject_call">拒绝</string>
    <string name="accept_call">接听</string>
    <string name="my_info_title_nick">昵称和性别</string>
    <string name="my_info_title_remark">个人签名</string>
    <string name="my_info_title_loc">您在哪里</string>
    <string name="name">姓名:</string>
    <string name="depart">部门:</string>
    <string name="mobile">手机号:</string>
    <string name="mobile_number">手机号码</string>
    <string name="phone">固定电话:</string>
    <string name="telephone">电话</string>
    <string name="email">邮箱:</string>
    <string name="navi_message">密信</string>
    <string name="navi_contacts">密友</string>
    <string name="navi_call">密话</string>
    <string name="add_user">添加密友</string>
    <string name="select_user">选择联系人</string>
    <string name="settings">设置</string>
    <string name="contacter">手机通讯录</string>
    <string name="user_info">密友资料</string>
    <string name="about">关于密信</string>
    <string name="user_calllog_info">通话记录</string>
    <string name="user_notify">密友推荐</string>
    <string name="user_group">密友群聊</string>
    <string name="group_chat">群聊</string>
    <string name="voice">语音</string>
    <string name="receive">接受</string>
    <string name="state_area">国家或地区</string>
    <string name="china">中国（86）</string>
    <string name="you_can_send_again_after_60s_when_not_receive_sms">如何没有收到短信，60秒后可以点击重发"</string>
    <string name="add_user_by_contacs">从通讯录添加</string>
    <string name="add_user_by_invite">邀请好友</string>
    <string name="add_user_by_barcode">扫一扫</string>
    <string name="menu_contacts_add">添加联系人</string>
    <string name="menu_contacts_group_add">添加联系人分组</string>
    <string name="menu_contacts_group_rename">重命名联系人分组</string>
    <string name="menu_contacts_group_move">移动联系人分组</string>
    <string name="settings_notifcation">通知设置</string>
    <string name="settings_privacy">隐私设置</string>
    <string name="settings_chat">聊天设置</string>
    <string name="settings_clear">缓存清除</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="settings_about">关于密信</string>
    <string name="settings_logout_btn">退出登录</string>
    <string name="settings_exit_btn">退出密信</string>
    <string name="exiting_mixin">正在退出密信</string>
    <string name="unkown_error_code">未知乱码</string>
    <string name="video_will_be_destoried">视频即将销毁</string>
    <string name="video_had_destoried">视频已经销毁</string>
    <string name="exit_app_click_again">再按一次退出程序</string>
    <string name="no_chat_message_tips">快去通讯录，找个密友聊聊吧！</string>
    <string name="no_notice_tips">每次和密友间相互添加，这里都会记录下来。</string>
    <string name="no_other_contacters_tips">通讯录里没有其他密信好友咯，快去邀请吧。</string>
    <string name="no_contacts_tips">一个人好孤独，快去添加密友吧！</string>
    <string name="no_friends_message_tips">密友圈空空如也，快去分享好玩的事情吧！</string>
    <string name="no_calllogs_tips">试试用密话，和密友通个电话吧！</string>
    <string name="private_session_mode">密话模式</string>
    <string name="public_session_mode">明话模式</string>
    <string name="local_secret_shield_state_changed_call_inturrept">本机密盾状态变化，通话中止</string>
    <string name="opposite_side_secret_shield_state_changed_call_inturrept">对方密盾状态变化，通话中止</string>
    <string name="fa_lai">发来</string>
    <string name="x_new_message">条新信息</string>
    <string name="request_to_be_your_friend">请求和您成为密友</string>
    <string name="x_hope_to_be_your_friend">请求和您成为密友</string>
    <string name="enter_secret_friends_list_after_click">点击进入密友推荐列表查看</string>
    <string name="there_is">有</string>
    <string name="there_is_from">有来自</string>
    <string name="x_missed_call">的未接来电</string>
    <string name="x_call">的来电...</string>
    <string name="in_resister">正在注册...</string>
    <string name="must_be_integer_and_greate_than_0">必须为整数且大于0！</string>
    <string name="can_not_be_empty">不能为空</string>
    <string name="area_contain_illegal_character">面积含非法字符</string>
    <string name="bank_account_form_error">银行帐号必须为16-21位的数字！</string>
    <string name="phone_number_form_error">手机号码格式错误</string>
    <string name="identifier_digit_number_error">身份证号必须为15或18位数字（最后一位可以为X）</string>
    <string name="identifier_previous_two_digit_number_error">身份证号前两位不正确</string>
    <string name="birth_date_illegal">出生日期非法</string>
    <string name="incorrect_identifier_digit_count">身份证号位数不正确，请确认！</string>
    <string name="birth_date_can_be_later_than_today">出生日期不能在今天之后</string>
    <string name="start_call">开始呼叫</string>
    <string name="calling">正在呼叫</string>
    <string name="in_call">来电</string>
    <string name="out_call">去电</string>
    <string name="calling_you_request_voice_call">正在呼叫您，请求语音通话...</string>
    <string name="request_voice_call">，请求语音通话...</string>
    <string name="vocie_call_you_but_missed">语音呼叫您，您没有接听</string>
    <string name="version_update">版本更新</string>
    <string name="mixin_new_version">密信新版本</string>
    <string name="had_publish_whether_download">已经发布，是否立即下载？</string>
    <string name="downloading">下载中</string>
    <string name="version_install">版本安装</string>
    <string name="download_finish_whether_update_right_now">下载完成，是否立即更新？</string>
    <string name="please_wait">请稍等</string>
    <string name="searching">正在搜索...</string>
    <string name="please_check_account_and_password">请检查号码或用户名是否正确</string>
    <string name="this_secret_friend_does_not_exist">该密友不存在</string>
    <string name="her">她</string>
    <string name="he">他</string>
    <string name="with">与</string>
    <string name="number_too_big">数值太大</string>
    <string name="your_input_include_other_character_except_for_number">输入含非数字字符!</string>
    <string name="in_a_call">通话中</string>
    <string name="normal_call">正常通话</string>
    <string name="opposite_side_off_line">对方不在线</string>
    <string name="no_response">无应答</string>
    <string name="initiative_cancel">主动取消</string>
    <string name="opposite_in_call">对方正在通话</string>
    <string name="refuse">拒绝</string>
    <string name="secret_state_changed">密盾状态变化</string>
    <string name="line_error">线路异常</string>
    <string name="in_a_voice_call_with_you">正在与您语音通话中</string>
    <string name="get_a_new_message">发来1条新信息</string>
    <string name="add">添加</string>
    <string name="record_a_scene_video">录影</string>
    <string name="voice_call">语音通话</string>
    <string name="send_contact">发送名片</string>
    <string name="send_file">发送文件</string>
    <string name="shooting">拍摄</string>
    <string name="picture">图片</string>
    <string name="user_name">用户名</string>
    <string name="signature">签名</string>
    <string name="region">地区</string>
    <string name="get_picture_from_album">从相册选择</string>
    <string name="get_a_text_message">发来了一条文字信息</string>
    <string name="get_a_video">发来了一段视频</string>
    <string name="get_a_picture">发来了一张图片</string>
    <string name="get_a_voice">发来了一段语音</string>
    <string name="get_a_file">发来了一个文件</string>
    <string name="you_send_a_text">你发送了一条文字信息</string>
    <string name="you_send_a_picture">你发送了一张图片</string>
    <string name="you_send_a_video">你发送了一段视频</string>
    <string name="you_send_a_voice">你发送了一段语音</string>
    <string name="you_send_a_file">你发送了一个文件</string>
    <string name="searching_yourself_that_boring">搜索你自己，太无聊啦</string>
    <string name="searching_content">搜索内容</string>
    <string name="text_message">文字消息</string>
    <string name="voice_message">语音消息</string>
    <string name="message_had_been_destoried">消息已销毁</string>
    <string name="media_file_size_over_limit">只支持发送不超过 10M 大小的媒体文件</string>
    <string name="save">保存</string>
    <string name="group">分组</string>
    <string name="group_name">分组名称</string>
    <string name="company_name">公司名称</string>
    <string name="position">职位</string>
    <string name="remark">备注</string>
    <string name="move_to">移动到</string>
    <string name="edit">编辑</string>
    <string name="had_deleted">已删除</string>
    <string name="had_added">已添加</string>
    <string name="message_had_destoried">消息已经销毁</string>
    <string name="mode_of_destorying_after_read">阅后即焚模式</string>
    <string name="mode_of_chat_normal">普通阅读模式</string>
    <string name="send_message_failure">信息发送失败</string>
    <string name="copy">复制</string>
    <string name="transmit">转发</string>
    <string name="destory">销毁</string>
    <string name="just_wait">该功能稍后版本发布，敬请期待:)</string>
    <string name="telephone_receiver_mode">语音切换到听筒模式</string>
    <string name="loudspeaker_mode">语音切换到外放模式</string>
    <string name="network_error_can_not_do_vocie_call">网络状态异常，无法进行语音呼叫。</string>
    <string name="network_busy_do_voice_call_later">网络正忙，请稍候拨打语音电话。</string>
    <string name="had_record_x_video">已录制 %.1f 秒</string>
    <string name="finish">完成</string>
    <string name="pcontacts_info">联系人信息</string>
    <string name="my_folder">个人文件夹</string>
    <string name="menu_contacts_modify">联系人修改</string>
    <string name="tos">安司密信用户协议</string>
    <string name="tos_prefix">点击注册，代表您已同意</string>
    <string name="forgotpwd">忘记密码？</string>
    <string name="message_invalid_username_password">错误的用户名或密码</string>
    <string name="message_login_conflicted">该用户在其他设备上已登录，不允许重复登录</string>
    <string name="message_existed_username">该手机号已注册</string>
    <string name="message_server_unavailable">密信无法连接到服务器</string>
    <string name="message_user_disabled">用户被禁用</string>
    <string name="message_user_expired">账户已过期</string>
    <string name="message_userip_no_access">IP不合法,已被禁用</string>
    <string name="unrecoverable_error">发生未知异常，连接失败</string>
    <string name="search_failed">该用户不存在</string>
    <string name="varified_password_error">验证密码错误</string>
    <string name="x_seconds_send_again">秒后重发</string>
    <string name="sms_verification_code_send_success">短信验证码发送成功</string>
    <string name="sms_verification_code_had_send_to">包含验证码的短信已发送至 </string>
    <string name="sms_verification_code_send_failure">短信验证码发送失败，请检查手机号码，稍等重试</string>
    <string name="phone_number_had_register">该手机号码已注册密信，请直接登录，或者注册其他号码</string>
    <string name="prompt">提示</string>
    <string name="check_connection">网络连接失败，请检查网络设置</string>
    <string name="check_sdcard">请检查内存卡！</string>
    <string name="original_sdcard_not_found_and_find_other">原存储卡不在位，发现其他可用的存储卡</string>
</resources>