<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/main_head"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/white6" >

        <TextView
            android:id="@+id/title_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_clickable_background"
            android:drawableLeft="@drawable/common_back_btn_normal"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="18.0sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/add_user_by_contacts_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:text="@string/settings_notifcation"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white2"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/add_user_by_invite_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:text="@string/settings_chat"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white2"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/add_user_by_barcode_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:text="@string/settings_privacy"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white2"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/add_user_by_barcode_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:text="@string/settings_clear"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white2"
        android:contentDescription="@null" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@color/white2"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/add_user_by_barcode_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:text="@string/settings_feedback"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white2"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/add_user_by_barcode_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:text="@string/settings_about"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white2"
        android:contentDescription="@null" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/red_button"
        android:text="@string/settings_logout_btn"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>