<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/main_head"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/white6" >

        <TextView
            android:id="@+id/title_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/common_back_btn_normal"
            android:gravity="center_vertical"
            android:text="@string/add_user"
            android:textColor="@color/black"
            android:textSize="18.0sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linegray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/search_user_input"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/white_editbox_frame"
            android:cursorVisible="true"
            android:hint="@string/search_hint"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textPhonetic"
            android:singleLine="true"
            android:textColor="@color/darkgray"
            android:textColorHint="@color/lightgray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/search_cfm_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/green_button"
            android:text="@string/search_btn"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/linegray" />

    <LinearLayout
        android:id="@+id/add_user_by_contacts_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/add_friends_contacts"
            android:contentDescription="null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:text="@string/add_user_by_contacs"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="10dp"
        android:background="@color/lightgray"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/add_user_by_invite_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/add_friends_invite"
            android:contentDescription="null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/add_user_by_invite"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="10dp"
        android:background="@color/lightgray"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/add_user_by_barcode_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/add_friends_barcode"
            android:contentDescription="null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:text="@string/add_user_by_barcode"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="10dp"
        android:background="@color/lightgray"
        android:contentDescription="@null" />

</LinearLayout>